--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 
   <ul>
     <li>2 slices of bread</li>
-    <li>4 slices of cheese</li>
+    <li>
+      <ul>
+        <li>cheddar</li>
+        <li>buffalo</li>
+        <li>mozarella</li>
+      4 slices of cheese</li>
     <li>1 tbsp of butter</li>
   </ul>
 
