Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 
   <ul>
     <li>2 slices of bread</li>
-   
-      <ul>
-        <li>cheddar</li>
-        <li>buffalo</li>
-        <li>mozarella</li>
-      <li>4 slices of cheese</li>
+    <li>4 slices of cheese
+    <ul>
+      <li>buffalo</li>
+      <li>mozarella</li>
+      <li>blue</li>
+    </ul>
+    </li>
     <li>1 tbsp of butter</li>
-    </ul> 
+    
   </ul>
 
 </body>
